--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ asttokens==2.0.8
 async-generator==1.10
 attrs==22.1.0
 backcall==0.2.0
-certifi==2022.9.24
+certifi>=2023.7.22
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
